Configurando o contexto no Startup.cs

--- a/SistemaFotos.Web/appsettings.json
+++ b/SistemaFotos.Web/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default-sqlite": "Data Source=Albuns.db"
+    "DefaultSqlite": "Data Source=Albuns.db"
   }
 }
