Atualizando para AspNet 3.1

--- a/SistemaFotos.Web/appsettings.json
+++ b/SistemaFotos.Web/appsettings.json
@@ -6,6 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultSqlite": "Data Source=Albuns.db"
+    "DefaultSqlite": "Data Source=Albuns.db",
+    "DefaultLocalDB": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SistemaFotos.Albuns;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
